syntax = "proto3";

package grpc.v1;

import "google/protobuf/empty.proto";

option go_package = "docs/proto/pubsub/v1";

service PubSub {
    rpc Subscribe(SubscribeRequest) returns (stream Event);
    rpc Publish(PublishRequest) returns (google.protobuf.Empty);
}

message SubscribeRequest {
    string key = 1;
}

message PublishRequest {
    string key = 1;
    string data = 2;
}

message Event {
    string data = 1;
}